--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "topthink/framework": "^6.0.0",
         "topthink/think-orm": "^2.0",
         "topthink/think-view": "^1.0",
+        "topthink/think-captcha": "^3.0",
         "workerman/gateway-worker": "^3.0",
-        "workerman/gatewayclient": "^3.0",
-        "topthink/think-captcha": "^3.0"
+        "workerman/gatewayclient": "^3.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.2",
